# openvlagrasp

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/src/openvla_grasp/: fake_image.py  package.xml  setup.cfg  setup.py
ros2_ws/src/openvla_grasp/launch/: openvla_grasp.launch.py
ros2_ws/src/openvla_grasp/openvla_grasp/: openvla_grasp.py  openvla_grasp1.py
ros2_ws/src/openvla_grasp/resource/: openvla_grasp
