<?xml version="1.0"?>
<package format="3">
  <name>openvla_grasp</name>
  <version>0.0.1</version>
  <description>OpenVLA grasp node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
</package>
